# aegis-cli

./: .gitignore  Cargo.toml  README.md  go.mod  go.sum
cmd/aegis-cli/: main.go
internal/search/: search.go  search_test.go
internal/totp/: totp.go  totp_test.go
internal/tui/: model.go  timeout_test.go  update.go  view.go
internal/vault/: decrypt.go  decrypt_test.go  types.go  types_test.go
src/: app.rs  decrypt.rs  lib.rs  main.rs  otp.rs  ui.rs  vault.rs
tests/: app_test.rs  decrypt_test.rs  otp_test.rs  search_test.rs  vault_test.rs
tests/integration/: main_test.go
