[package]
name = "aegis-cli"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
scrypt = "0.11"
base64 = "0.22"
totp-rs = "5.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
zeroize = "1.0"
nucleo = "0.5"
arboard = "3.0"
